<resources>
    <string name="app_name">福利云</string>
    <string name="login">登录福利平台</string>
    <string name="hint_user">请输入用户名</string>
    <string name="hint_pwd">请输入密码</string>
    <string name="atuologin">自动登录</string>
    <string name="forgetpwd">忘记密码</string>
    <string name="toast_login_empty">请输入用户名和密码！</string>
    <string name="toast_login_error">用户名或密码错误！</string>
    <string name="consult">有疑问请咨询：400-8558-121</string>
    <string name="logostore">本期的内卖活动已结束，敬请期待下期！</string>
    <string name="performance">暂无绩效考核</string>
    <string name="performance_score">得分</string>
    <string name="rentgoods">领 用</string>
    <string name="start_work">上班</string>
    <string name="off_work">下班</string>
    <string name="reward">奖励</string>
    <string name="integral">积分</string>
    <string name="yourscore">你的得分</string>
    <string name="ranking">排名第</string>
    <string name="forward">前</string>
    <string name="menu_home">首页</string>
    <string name="menu_welfare">公司门户</string>
    <string name="menu_life">生活服务</string>
    <string name="menu_mall">在线商城</string>
    <string name="menu_buycar">购物车</string>
    <string name="menu_logostore">Logo商店</string>
    <string name="menu_personal">个人空间</string>
    <string name="mywelfare">我的福利</string>
    <string name="nodatagetted">无法取得数据！</string>
    <string name="grid_onlineinquery">在线查询</string>
    <string name="grid_holidaywelfare">节日福利</string>
    <string name="grid_sale">每周一团</string>
    <string name="grid_orderquery">我的订单</string>
    <string name="ret">返回</string>
    <string name="changepwd">修改密码</string>
    <string name="orderquery">我的订单</string>
    <string name="hispoints">积分历史</string>
    <string name="isMobileBind">绑定手机</string>
    <string name="checkupdate">检查更新</string>
    <string name="help">帮助信息</string>
    <string name="exit">退出登录</string>
    <string name="points_title">积分：</string>
    <string name="loginname_title">&#160;&#160;&#160;登陆名：</string>
    <string name="idno_title">&#160;&#160;&#160;&#160;身份证：</string>
    <string name="gender_title">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;性别：</string>
    <string name="birthday_title">出生年月：</string>
    <string name="mail_title">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;邮箱：</string>
    <string name="username_title">&#160;&#160;&#160;&#160;用户名：</string>
    <string name="cellnumber_title">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;手机：</string>
    <string name="createtime_title">注册日期：</string>
    <string name="personalinfo">个人档案</string>
    <string name="companyname">公司名称：</string>
    <string name="companyaddress">公司地址：</string>
    <string name="compangphone">公司电话：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="unmarried">未婚</string>
    <string name="married">已婚</string>
    <string name="buy">直 接 订 购</string>
    <string name="row_welfare">公司福利</string>
    <string name="row_shop">特约商户</string>
    <string name="row_logoshop">LOGO商店</string>
    <string name="row_week">每周一团</string>
    <string name="row_notice">公告</string>
    <string name="row_activity">活动</string>
    <string name="row_suivey">调查</string>
    <string name="row_contact">通讯录</string>
    <string name="row_itemdraw">物品领用></string>
    <string name="row_groupbuy">限时团购</string>
    <string name="row_train">培训</string>
    <string name="row_attence">APP考勤</string>
    <string name="row_rule">规章制度</string>
    <string name="row_performance">绩效考核</string>
    <string name="nowelfareinfo">无福利商品数据！</string>
    <string name="walfarefinish">本期的福利商品选购已结束，敬请期待下期！</string>
    <string name="forget_phone">手机号</string>
    <string name="titlepwd">修改密码</string>
    <string name="currpwd">当前密码</string>
    <string name="newpwd">新密码</string>
    <string name="comfirmnewpwd">确认新密码</string>
    <string name="enterpwd">请输入密码！</string>
    <string name="diffpwderr">新密码输入与确认密码不同！</string>
    <string name="oldpwderr">旧密码不正确！</string>
    <string name="chgpwdsuccess">"修改密码成功,请重新登录!"</string>
    <string name="securitycode">验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="sendcodesuccess">发送成功</string>
    <string name="sendcodefail">发送失败</string>
    <string name="addshoppting">加入购物车</string>
    <string name="producttitle">商品描述</string>
    <string name="nodetailinfo">无详情信息</string>
    <string name="pointsneeded">所需积分：</string>
    <string name="shopptingadded">商品已加入购物车</string>
    <string name="nopointshis">没有积分历史</string>
    <string name="orderconfirm">提交订单</string>
    <string name="receiverinfo">收货信息</string>
    <string name="beizhu">备注信息</string>
    <string name="product">商品信息</string>
    <string name="input_beizhu">在此输入备注信息</string>
    <string name="receiver_title">收&#160;&#160;货&#160;&#160;人：</string>
    <string name="recAdd_title">收货地址：</string>
    <string name="recPhone_title">联系电话：</string>
    <string name="request_points_title">合计所需积分：</string>
    <string name="total_points_title">您的剩余积分：</string>
    <string name="commitordersuccess">提交订单成功</string>
    <string name="noorderinfo">没有订单信息！</string>
    <string name="orderid">订单id</string>
    <string name="order_integral">积分</string>
    <string name="order_number">数量</string>
    <string name="order_pending">待处理</string>
    <string name="life">生活</string>
    <string name="health">健康</string>
    <string name="safety">保险</string>
    <string name="isexpired">已过期</string>
    <string name="useful">最近发布</string>
    <string name="post">公告</string>
    <string name="postdetail">公告详情</string>
    <string name="nopostinfo">没有公告信息！</string>
    <string name="welfaredetail">福利商品详情</string>
    <string name="activitydetail">活动详情</string>
    <string name="trainingdetail">培训详情</string>
    <string name="activity">公司活动</string>
    <string name="activity_sub">公司详情</string>
    <string name="btn_actjoin">报名</string>
    <string name="acttime">活动时间</string>
    <string name="locationaddr">活动地点</string>
    <string name="activity_content">活动内容</string>
    <string name="noactivityinfo">没有活动信息！</string>
    <string name="notraininginfo">没有培训信息！</string>
    <string name="noenroll">未报名</string>
    <string name="enrollconfirm">报名确认</string>
    <string name="cancelenroll">取消报名</string>
    <string name="isenrollconfirm">确定要参加吗？</string>
    <string name="enrollcancel">报名取消</string>
    <string name="isenrollcancel">确定要取消吗？</string>
    <string name="applicants">已报名人数/报名限制人数：</string>
    <string name="deadline">报名截止时间：</string>
    <string name="actpoint">奖励积分/惩罚积分：</string>
    <string name="enrollfailed">报名失败</string>
    <string name="cancelfailed">取消失败</string>
    <string name="cancelsuccess">取消成功</string>
    <string name="enrollsuccess">报名成功</string>
     <string name="trainingtime">培训时间</string>
    <string name="trainingaddr">培训地点</string>
    <string name="trainingcontent">培训内容</string>
    <string name="survey">公司调查</string>
    <string name="vote">投&#160;&#160;票</string>
    <string name="title_activity_store">StoreActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nosurveyinfo">没有调查信息！</string>
 	<string name="shoppingcar_txt">即将购买的商品</string>
  	<string name="nullshoppingcar_txt">请前往Logo商店或者公司福利添加商品</string>
  	<string name="format_sum_points">总计：%1$s积分</string>
  	<string name="commitsuccess">提交成功</string>
  	<string name="commitfailed">提交失败</string>
  	<string name="commitfailed2">提交失败 ：</string>
    <string name="goodsname">商品名称</string>
    <string name="goodsnumber">数量</string>
  	<string name="goodsquality">属性</string>
  	<string name="common">常用联系人</string>
    <string name="relation">重要联系人</string>
    <string name="contact">公司通讯录</string>
    <string name="contactdetail">联系人详情</string>
    <string name="telephone">电话</string>
    <string name="cellphone">手机</string>
    <string name="fax">传真</string>
    <string name="mailbox">邮箱</string>
    <string name="work">工作</string>
    <string name="search">搜索</string>
    <string name="nocontact">查无此联系人</string>
    <string name="searchtext_hint">请搜索中文名，英文名，部门</string>
    <string name="addcontact">添加联系人</string>
    <string name="goods_detail">商品详情</string>
    <string name="colour">颜色</string>
    <string name="size">尺码</string>
    <string name="stock">库存：</string>
    <string name="payroll">工资单</string>
    <string name="nopayroll">暂无工资单信息！</string>
    <string name="payrolldetail">工资单详情</string>
    <string name="totalpay_title">基本薪资</string>
    <string name="basepay_title">基本工资：</string>
    <string name="subsidy_title">津贴：</string>
    <string name="onechildfee_title">独生子女费：</string>
    <string name="salaryadd_title">薪资增项</string>
    <string name="overtimesalary_title">加班费：</string>
    <string name="bonus_title">奖金：</string>
    <string name="annualbonus_title">年终奖：</string>
    <string name="addothers_title">其他应发：</string>
    <string name="others_title">其他：</string>
    <string name="salarydeduct_title">薪资减项</string>
    <string name="leavededuction_title">请假扣款合计：</string>
    <string name="endowmentinsurance_title">个人养老保险：</string>
    <string name="endowmentinsuranceretroactive_title">个人养老保险补缴：</string>
    <string name="hospitalizationinsurance_title">个人医疗保险：</string>
    <string name="hospitalizationinsuranceretroactive_title">个人医疗保险补缴：</string>
    <string name="unemploymentinsurance_title">个人失业保险：</string>
    <string name="unemploymentinsuranceretroactive_title">个人失业保险补缴：</string>
    <string name="reservefund_title">个人公积金：</string>
    <string name="reservefundretroactive_title">个人公积金补缴：</string>
    <string name="deductothers_title">其他应扣：</string>
    <string name="salarytax_title">计税薪资</string>
    <string name="pretaxwages_title">税前工资：</string>
    <string name="incometax_title">所得税：</string>
    <string name="realwages1_title">实发工资：</string>
    <string name="realwages_title">实发工资</string>
    <string name="periodmonth_title">薪资发放月份</string>
    <string name="meritpay_title">绩效工资：</string>
    <string name="secret_title">特勤工资：</string>
    <string name="positionsalary_title">岗位工资：</string>
    <string name="totalallowance_title">补贴小计</string>
    <string name="housingsubsidy_title">住房补贴：</string>
    <string name="entry_management">入职管理</string>
    <string name="basic_info">基本信息</string>
    <string name="comDep">应聘部门：</string>
    <string name="comPos">应聘职位：</string>
    <string name="comEntryDate">到岗日期：</string>
    <string name="residence">现居地：</string>
    <string name="mobile">联系方式：</string>
    <string name="urgentContact">紧急联系人：</string>
    <string name="urgentMobile">紧急联系方式：</string>
    <string name="regions">户籍详细地址：</string>
    <string name="entryResidence">请输入“现居地”</string>
    <string name="entryMobile">请输入“联系方式”</string>
    <string name="entryUrgentContact">请输入“紧急联系人”</string>
    <string name="entryUrgentMobile">请输入“紧急联系方式”</string>
    <string name="entryRegions">请输入“户籍详细地址”</string>
    <string name="mobileFormat">请正确输入“联系方式”</string>
     <string name="urgentMobileFormat">请正确输入“紧急联系方式”</string>
    <string name="personName">中文名：</string>
    <string name="englishName">英文名：</string>
    <string name="gender">性别：</string>
    <string name="nation">民族：</string>
    <string name="maritalStatus">婚姻状况:</string>
    <string name="politicalStatus">政治面貌:</string>
    <string name="healthCondition">健康状况:</string>
    <string name="culturalDegree">文化程度:</string>
    <string name="major">专业：</string>
    <string name="urgentAddr">紧急联系人地址:</string>
    <string name="socialSecurityNo">社保账户:</string>
    <string name="address">籍贯：</string>
    <string name="idNo">身份证号：</string>
    <string name="educationNo">学历证号：</string>
    <string name="accumFund">公积金编号：</string>
    <string name="depositBank">开户银行：</string>
    <string name="depositCardNo">银行账号：</string>
    <string name="entryPersonName">请输入“中文名”</string>
    <string name="entryEnglishName">请输入“英文名”</string>
    <string name="confirm">确定</string>
</resources>