<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bg" >

        <TextView
            android:id="@+id/tv_ret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/ret"
            android:textColor="@color/WHITE" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/personalinfo"
            android:textColor="@color/WHITE" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_personal_info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WHITE"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_loginname_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginname_title"
                android:textColor="@color/BLACK" />

            <TextView
                android:id="@+id/tv_loginname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/menu_text_press" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WHITE"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_username_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_title"
                android:textColor="@color/BLACK" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/menu_text_press" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WHITE"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_idno_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idno_title"
                android:textColor="@color/BLACK" />

            <TextView
                android:id="@+id/tv_idno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/menu_text_press" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WHITE"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_gender_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_title"
                android:textColor="@color/BLACK" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/menu_text_press" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WHITE"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_birthday_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday_title"
                android:textColor="@color/BLACK" />

            <TextView
                android:id="@+id/tv_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/menu_text_press" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WHITE"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_mail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail_title"
                android:textColor="@color/BLACK" />

            <TextView
                android:id="@+id/tv_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/menu_text_press" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WHITE"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_cellnumber_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cellnumber_title"
                android:textColor="@color/BLACK" />

            <TextView
                android:id="@+id/tv_cellnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/menu_text_press" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WHITE"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_createtime_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createtime_title"
                android:textColor="@color/BLACK" />

            <TextView
                android:id="@+id/tv_createtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/menu_text_press" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>