<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WHITE"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/navigationbar" >

        <TextView
            android:id="@+id/tv_ret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/ret"
            android:textColor="@color/WHITE" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/orderconfirm"
            android:textColor="@color/WHITE" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/tv_receiver_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/receiver_title"
                            android:textColor="@color/BLACK" />

                        <TextView
                            android:id="@+id/tv_receiver"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/menu_text_press" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/tv_recAdd_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recAdd_title"
                            android:textColor="@color/BLACK" />

                        <TextView
                            android:id="@+id/tv_recAdd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/menu_text_press" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/tv_recPhone_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recPhone_title"
                            android:textColor="@color/BLACK" />

                        <TextView
                            android:id="@+id/tv_recPhone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/menu_text_press" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_arrowright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/arrow_right" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_peisonginfo_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/welfare_item_tab_bg"
                android:text="@string/peisonginfo" />

            <TextView
                android:id="@+id/tv_setname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/menu_text_press" />

            <TextView
                android:id="@+id/tv_appdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/BLACK" />

            <TextView
                android:id="@+id/tv_beizhu_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/welfare_item_tab_bg"
                android:text="@string/beizhu" />

            <EditText
                android:id="@+id/et_beizhu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@color/welfare_item_tab_bg"
                android:hint="@string/input_beizhu"
                android:lines="4" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/label"
                android:text="@string/confirm"
                android:textColor="@color/WHITE" />

            <TextView
                android:id="@+id/tv_product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/welfare_item_tab_bg"
                android:text="@string/product" />

            <LinearLayout
                android:id="@+id/layout_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/welfare_item_tab_bg"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_request_points_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/request_points_title"
                    android:textColor="@color/BLACK" />

                <TextView
                    android:id="@+id/tv_request_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/menu_text_press" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_total_points_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total_points_title"
                    android:textColor="@color/BLACK" />

                <TextView
                    android:id="@+id/tv_total_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/menu_text_press" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_orderconfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/greenbutton"
                android:text="@string/orderconfirm"
                android:textColor="@color/WHITE" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>