<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bg" >

        <TextView
            android:id="@+id/tv_ret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/ret"
            android:textColor="@color/WHITE" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/activity"
            android:textColor="@color/WHITE" />

    </RelativeLayout>
    
    

    <LinearLayout
        android:id="@+id/layout_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/layout_useful"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/WHITE"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_margin="1dip" >

            <TextView
                android:id="@+id/tv_useful"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/useful"
                android:textColor="@color/title_bg" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_expired"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/WHITE"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_margin="1dip" >

            <TextView
                android:id="@+id/tv_expired"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isexpired"
                android:textColor="@color/BLACK" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/list_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:scrollbars="none" />

</LinearLayout>